# mos

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/framebuffer/: mod.rs
kernel/src/gdt/: mod.rs
kernel/src/init/: mod.rs
kernel/src/utils/: mod.rs  racy_cell.rs
kernel/src/utils/bitarray/: mod.rs
kernel/src/utils/registers/: mod.rs
os/: Cargo.toml  README.md
os/kernel/.cargo/: config.toml
os/kernel/src/framebuffer/: mod.rs
os/kernel/src/init/: mod.rs
os/src/: main.rs
src/: main.rs
src/bitarray/: mod.rs
src/gdt/: mod.rs
src/init/: mod.rs
src/registers/: mod.rs
src/vga/: mod.rs
